Complete integration layer validation for registration and application flows
Integration-layer validation now fully implemented.

- Added AccountPersistenceValidator and applied it in both normal registration and legacy registration flows in AccountService, with same checks as client side.

- Completed ApplicationPersistenceValidator so application submission now validates availability and experience data aswell. Squished som bugs. Also fixed application submit logging placement so success is logged after persistence steps.

- Minor javadoc shenanigans